--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.5.2"
+    "uploadthing": "^7.5.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
